# WapQQ

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: __init__.py  config.yaml.sample
saya/WapQQ/: __init__.py  config.py  requirements.txt
saya/WapQQ/dataBase/: __init__.py  tables.py  utils.py
saya/WapQQ/templates/: login.html
saya/WapQQ/web/: __init__.py  config.py  utils.py  webserver.py
saya/WapQQ/web/resources/css/: global.css
saya/WapQQ/web/resources/templates/: macro.jinja2  main_page.jinja2  message_page.jinja2  send_error.jinja2
