[tool.poetry]
name = "WapQQ"
version = "0.1.0"
description = "一个简单的网页端QQ，基于Ariadne。"
authors = ["CubeSugarCheese <cubesugarcheese@qq.com>"]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.9"
graia-ariadne = "^0.9.1"
graia-saya = "^0.0.16"
pyyaml = "^6.0"
sqlalchemy = "^1.4.32"
databases = {extras = ["sqlite"], version = "^0.5.5"}
uvicorn = "^0.17.6"
sanic = "^21.12.1"
loguru = "^0.6.0"
jinja2 = "^3.1.1"
Pillow = "^9.0.1"
httpx = "^0.22.0"
prompt_toolkit = "^3.0.28"
aiosqlite = "^0.17.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
default = true
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"


[[tool.pdm.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.build]
includes = []

[project]
authors = [
    {name = "CubeSugarCheese", email = "cubesugarcheese@qq.com"},
]
license = {text = "GNU Affero General Public License v3.0"}
requires-python = ">=3.9,<4.0"
dependencies = [
    "graia-ariadne<1.0.0,>=0.9.1",
    "graia-saya<1.0.0,>=0.0.16",
    "pyyaml<7.0,>=6.0",
    "sqlalchemy<2.0.0,>=1.4.32",
    "databases[sqlite]<1.0.0,>=0.5.5",
    "uvicorn<1.0.0,>=0.17.6",
    "sanic<22.0.0,>=21.12.1",
    "loguru<1.0.0,>=0.6.0",
    "jinja2<4.0.0,>=3.1.1",
    "Pillow<10.0.0,>=9.0.1",
    "httpx<1.0.0,>=0.22.0",
    "prompt-toolkit<4.0.0,>=3.0.28",
    "aiosqlite<1.0.0,>=0.17.0",
    "pydantic<2.0.0,>=1.9.0",
    "aiohttp>=3.8.3",
    "httptools>=0.5.0",
    "kayaku>=0.5.2",
    "creart>=0.2.2",
]
name = "WapQQ"
version = "0.1.0"
description = "一个简单的网页端QQ，基于Ariadne。"

[project.urls]
